--- a/src/components/ProjectsContent/ProjectsContent.module.css
+++ b/src/components/ProjectsContent/ProjectsContent.module.css
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     flex: 1 1 300px;
     gap: 50px;
-    width: 100%;
+    width: 90%;
     max-width: 1200px;
     margin: 0 auto;
 }
