--- a/src/components/SkillsContent/SkillsContent.module.css
+++ b/src/components/SkillsContent/SkillsContent.module.css
@@ -2,23 +2,28 @@
 
 .container {
     display: flex;
-    flex-direction: column;
-    text-align: center;
+    justify-content: center;
     align-items: center;
-    margin-top: 25px;
-    gap: 50px;
+    flex-wrap: wrap;
+    flex: 1 1 300px;
+    text-align: center;
+    gap: 30px;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .bubble {
-    background-color: var(--card-color);
-    box-shadow: 4px 4px 4px var(--shadow-color);
-    height: 8vw;
-    padding: 5px;
-    width: 8vw;
-    border-radius: 50%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 150px;
+    width: 150px;
+    padding: 5px;
+    z-index: 1;
+    background-color: var(--card-color);
+    box-shadow: 4px 4px 4px var(--shadow-color);
+    border-radius: 50%;
 }
 
 .bubble:hover {
@@ -38,28 +43,8 @@
     margin-top: 15px;
 }
 
-.languages, .techs {
+.skills {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 35px;
-}
-
-@media (max-width: 1100px) {
-    .container {
-        align-items: center;
-        gap: 30px;
-    }
-
-    .languages, .techs {
-        gap: 20px;
-    }
-
-    .bubble {
-        height: 11vw;
-        width: 11vw;
-    }
-
-    h2 {
-        display: none;
-    }
 }
